deploy/tests/e2e/https-runtime/config/echo-app-offload-default.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo-offload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-offload
  template:
    metadata:
      labels:
        app: http-echo-offload
    spec:
      containers:
        - name: http-echo
          image: "haproxytech/http-echo:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo-offload
  annotations:
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: http-echo-offload
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-echo-offload
  annotations:
    ingress.class: haproxy
spec:
  tls:
  - hosts:
      -  default.haproxy
    secretName: haproxy-default
  rules:
    - host: "offload-test.haproxy"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo-offload
                port:
                  name: http
---
