deploy/tests/e2e/https-runtime/config/secret-default.yaml
kind: Secret
apiVersion: v1
metadata:
  name: haproxy-default
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsekNDQW4rZ0F3SUJBZ0lVY2NqSzlmNHhDcE5HM3JpeGJCelJ3Qjg1VzNJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1d6RUxNQWtHQTFVRUJoTUNSbEl4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeEVEQU9CZ05WQkFvTQpCMGhCVUZKUFdGa3hDekFKQmdOVkJBc01Ba2xETVJnd0ZnWURWUVFEREE5a1pXWmhkV3gwTG1oaGNISnZlSGt3CkhoY05NakV3TWpJMk1URTBNak16V2hjTk1qRXdNekk0TVRFME1qTXpXakJiTVFzd0NRWURWUVFHRXdKR1VqRVQKTUJFR0ExVUVDQXdLVTI5dFpTMVRkR0YwWlRFUU1BNEdBMVVFQ2d3SFNFRlFVazlZV1RFTE1Ba0dBMVVFQ3d3QwpTVU14R0RBV0JnTlZCQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktrd2dnU2xBZ0VBQW9JQkFRQzUxa2w0SDQ5NzZaSlYKVTR5MDRCa3dtbUxld0ZyeGNDVzVJYU1ib2dNK3kvL2UwQXBpV3NoUWNvMEpGOVlYbUpmR3l1UUpNS0VjU1NzZgpGL010M2hiWW8vTFlacUV4eDhXRzQ0WDljZVNBUitaN3hHY0U5MktUUGkwSUh0bzA1RVMxVTdHVDRDcDlWZEdKCk1YeXJEdXZDd01VUUx4RUdzMzIxOG0yVVJtZ1d2SkRnQnVPYmdKRHlvamRDbDU3V1B1SnprNXR5Z09qcUhvSEsKR1dzLzF1K1AyWlVXSUg2bGtHWGNCSzA4Rk5lS0l0a1ZORmlYbjUvQzJHRlFFdFhya3J5d2xVODhvR1J1b3ViWApnTC9sWGJ4bzE0bGhsQ [...]
type: kubernetes.io/tls
# Common Name: default.haproxy
