deploy/tests/e2e/https-runtime/config/secret-offload-1.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lVSDRMNnFueCtiNE9YUFVyS1BjTGsrT3VWVndJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lURWZNQjBHQTFVRUF3d1diMlptYkc5aFpDMTBaWE4wTFRFdWFHRndjbTk0ZVRBZUZ3MHlOREV4TURReApORE00TWpCYUZ3MHlOVEV4TURReE5ETTRNakJhTUNFeEh6QWRCZ05WQkFNTUZtOW1abXh2WVdRdGRHVnpkQzB4CkxtaGhjSEp2ZUhrd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNQSXQ1MWlNNksKenlRbk0ydCt5dGRKakl3ZXhaN21PUG1sWTBmU3M0SU03S09PZWplNlBkNGpMbmZhV3BJMXBNMXdSZTI4NVFXUQpVMHIxZ2JNZEMvVm1wN [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ1BJdDUxaU02S3p5UW4KTTJ0K3l0ZEpqSXdleFo3bU9QbWxZMGZTczRJTTdLT09lamU2UGQ0akxuZmFXcEkxcE0xd1JlMjg1UVdRVTByMQpnYk1kQy9WbXA2UDBwdnd0b01rcWJPdGFpRVJsUHNDdXBpdGNlME1hcXNaL1RZUGhla0o5bE52cGJ4NndiTW91CjJrZ1ZKY096QkVGMFhxRmxib205VzJaeENlM202UGRndEtDTGdYaGtSSjJ6ald0RkhDWlREWm9mR1Q4MnhVM24KY09lcjJnbU13UjJtcnJjUFlsSzBHeXhGYlErUkdJbDNPcTM0eU13N2gxY3hMYkRIazgyaXB1bG5uYjBlb3hjbApTV09zK0NNUXU3NGRpM [...]
kind: Secret
metadata:
  name: haproxy-offload-test-1
type: kubernetes.io/tls
# Common Name: offload-test-1.haproxy
