deploy/tests/e2e/https-runtime/config/secret-offload-2.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lVRVVIWEVqQW44a29PV0NUV3FaT00zMjdSLzFJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lURWZNQjBHQTFVRUF3d1diMlptYkc5aFpDMTBaWE4wTFRJdWFHRndjbTk0ZVRBZUZ3MHlOREV4TURReApORFF6TkRKYUZ3MHlOVEV4TURReE5EUXpOREphTUNFeEh6QWRCZ05WQkFNTUZtOW1abXh2WVdRdGRHVnpkQzB5CkxtaGhjSEp2ZUhrd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNld010cDJhVG4KcUdwaUpxdkkvVzdVZWJZdERqVzZQa1cxQVVEQ0Vjcm5vYjB0MVBtQ1k3elJSUmlpektSZEhNdDlqVjJkVE1zbAp1UzRkOFVYTGFOLzArd [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQ2V3TXRwMmFUbnFHcGkKSnF2SS9XN1VlYll0RGpXNlBrVzFBVURDRWNybm9iMHQxUG1DWTd6UlJSaWl6S1JkSE10OWpWMmRUTXNsdVM0ZAo4VVhMYU4vMCt1WHlBMVZESEp3b1JZOWFqUDRnVEtvQTFGeERFSFdFb3JsTVNyUHJyTkU1TkNCMVNXZExKZWRKCmhLenludVArZTNMVEI0U2VWRUEzaUJoOFBCR1hPODhYenhOQkNEZmlJRHFjNk4weEc1L05JWGRXNndjcnBNbTgKVUk5ajVNNktSZFhDOStvUXJjdUgwNFdKd2FINGVEb2FaQXdod3k0a3JZckpVSmFBTWJwRUZpYTY4QXBSY3lzcgpTOW0xd1NkS2lIL2NNS [...]
kind: Secret
metadata:
  name: haproxy-offload-test-2
type: kubernetes.io/tls
# Common Name: offload-test-2.haproxy
