deploy/tests/e2e/https-runtime/config/secret-offload-3.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lVUW1aTTZ5cWVaajZkYTVxTE9JaG1CZHBrQ1F3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lURWZNQjBHQTFVRUF3d1diMlptYkc5aFpDMTBaWE4wTFRNdWFHRndjbTk0ZVRBZUZ3MHlOREV4TURReApORFEzTkRCYUZ3MHlOVEV4TURReE5EUTNOREJhTUNFeEh6QWRCZ05WQkFNTUZtOW1abXh2WVdRdGRHVnpkQzB6CkxtaGhjSEp2ZUhrd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURvbExnUjUzMGMKcTVqbmpjUFNFTVdwdXdJOGxJSTlrZ2hRUlhuVXFOYzdKNTZZekZtbC9JWjdydzlVNldyMkpTMC8vam12akpYbApaNjI3RWhUdUtnRUNjc [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRG9sTGdSNTMwY3E1am4KamNQU0VNV3B1d0k4bElJOWtnaFFSWG5VcU5jN0o1Nll6Rm1sL0laN3J3OVU2V3IySlMwLy9qbXZqSlhsWjYyNwpFaFR1S2dFQ2NxTHZScFJFYnlxMnhrS04wYkNQR3JjNTlvWUIweUN2ZjZLa3ZQdFlaNkFaU2FDT2Y2SStaMWRzCmRuaEo1MTltOFVRKzNhYm1Ic2wzRDBxOEFsN2FWRXRROE1lWUwwMGJOUEFsMU11ZVYzZCtRVjhOdzliaFd3OE0KVVRnVm9TWklGdkVVNUo0L3RFdU52OXlvaEtuaFE2N2xWY0JGMmZKTkpiN3J4RStTZ2pkelR1MVpKVWtTZzZTSApqTm1WbWNxRFF5TkZLW [...]
kind: Secret
metadata:
  name: haproxy-offload-test-3
type: kubernetes.io/tls
# Common Name: offload-test-3.haproxy
