deploy/tests/e2e/https-runtime/config/secret-offload.yaml

---
kind: Secret
apiVersion: v1
metadata:
  name: haproxy-offload-test
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvVENDQW9tZ0F3SUJBZ0lVSERSWS9TUnRjK0RwKzFibzk4ZkJIZGpOM05Zd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lERUxNQWtHQTFVRUJoTUNSbEl4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeEVEQU9CZ05WQkFvTQpCMGhCVUZKUFdGa3hDekFKQmdOVkJBc01Ba2xETVIwd0d3WURWUVFEREJSdlptWnNiMkZrTFhSbGMzUXVhR0Z3CmNtOTRlVEFlRncweU1UQXlNall4TVRRek5UbGFGdzB5TVRBek1qZ3hNVFF6TlRsYU1HQXhDekFKQmdOVkJBWVQKQWtaU01STXdFUVlEVlFRSURBcFRiMjFsTFZOMFlYUmxNUkF3RGdZRFZRUUtEQWRJUVZCU1QxaFpNUXN3Q1FZRApWUVFMREFKSlF6RWRNQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRREFQL2dORGVCSU95YXMKeFJyVUpiWHBkTHNMTnYzMFpIWkxOcldZZy9oZVJ6SHFXeUF1anlzVGlSa3duSGJwcTNJWTFINXhsNnRESm9qSApSSzIvUkIrSUpRN2J3RHJGZERmbEYwNEx6SjdsOW55bjA2MG12R3RvMnZEZ2pndjJtUmV6MVJvT0w1YjFrUWZ0CndBb3FoSUh0RkV5MU1lV0VUcUVPZ0ovRXNnY1Z4RVFuVzVKbkFsTlVuTFIwbjBPbll1MDRtNjUrMlQxSjNEeWYKclVOT3luenJVcTNIcmU3cjBadVBtQllJTGIrSDJzaFNCZWE0TWQ4eTUraFVrRzRlUFdjTVNRUUIyMnR1aDRwdApmYmJ3d0htRUxFR0NSc [...]
type: kubernetes.io/tls
# Common Name: offload-test.haproxy
---
